# llm-reflection-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  prompts.json  pyproject.toml  requirements.txt  test_markdown_pdf.py
saves/: llm-reflection-report
src/: pdf_export.py  prompts.json  visualizations.py
templates/: default.json  dialectical-synthesis.json  empirical-scientific.json  ontology-of-epistemology.json  socratic-method.json  systems-thinking.json
